K8S/statefulsets/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch-headless
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - name: elasticsearch-pvc
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              memory: 4Gi
              cpu: "2"
            requests:
              memory: 1Gi
              cpu: "0.5"
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "local-path" # Don't need to provide this when using cloud based cluster
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
    - port: 9200
      name: http
      targetPort: 9200
    - port: 9300
      name: transport
      targetPort: 9300
  selector:
    app: elasticsearch
