K8S/statefulsets/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  serviceName: minio
  replicas: 4  # Adjust as needed
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data{0...3}  # Adjust based on replicas
            - --console-address=:9001
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-path" # Don't need to provide this when using cloud based cluster
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    cert-manager.io/cluster-issuer: minio-letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.example.com
      secretName: minio-ingress-tls
  rules:
    - host: minio.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
